--- a/index.html
+++ b/index.html
@@ -179,9 +179,24 @@ function expandLittleNavbar() {
 }
 
 window.addEventListener('scroll', () => {
+
+  function tick(i = 0, elem) {
+    let y = 1; // multiplier 
+    requestAnimationFrame(() => {
+      if(i < 10){
+        elem.scrollTop = elem.scrollTop + y;
+        y = y + 0.00001;
+        tick(i+i, elem);
+      }
+    });
+  }
+
   const parent = document.getElementById('featuresParent');
   const nextSection = document.getElementById('madeWithExokit');
   const insideContent = document.getElementById('featuresInside');
+  const featuresLeft = document.getElementById('featuresLeft');
+  const featuresMiddle = document.getElementById('featuresMiddle');
+  const featuresRight = document.getElementById('featuresRight');
 
   const distanceFromTop = (parent.offsetTop - window.scrollY);
   const topOfNextSection = (nextSection.offsetTop - window.scrollY) - (window.innerHeight - (window.innerHeight / 4));
@@ -198,40 +213,82 @@ window.addEventListener('scroll', () => {
   if(distanceFromTop <= 0 && topOfNextSection > 0){
       insideContent.style.top = "0";
       insideContent.style.position = "fixed";
-      let currCount = Number(counter.innerHTML);
-      counter.innerHTML = currCount + 1;
-      if(factor > 0.09 && factor < 0.18){
+      if(factor > 0.09 && factor < 0.18 && counter.innerText != "1"){
         console.log('1st flip')
+        counter.innerText = "1";
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.18 && factor < 0.27){
+      if(factor > 0.18 && factor < 0.27 && counter.innerText != "2"){
         console.log('2nd flip')
+        counter.innerText = "2";
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.27 && factor < 0.36){
+      if(factor > 0.27 && factor < 0.36 && counter.innerText != "3"){
+        counter.innerText = "3";
         console.log('3rd flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.36 && factor < 0.45){
+      if(factor > 0.36 && factor < 0.45 && counter.innerText != "4"){
+        counter.innerText = "4";
         console.log('4th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.45 && factor < 0.54){
+      if(factor > 0.45 && factor < 0.54 && counter.innerText != "5"){
+        counter.innerText = "5";
         console.log('5th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.54 && factor < 0.63){
+      if(factor > 0.54 && factor < 0.63 && counter.innerText != "6"){
+        counter.innerText = "6";
         console.log('6th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.63 && factor < 0.72){
+      if(factor > 0.63 && factor < 0.72 && counter.innerText != "7"){
+        counter.innerText = "7";
         console.log('7th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.72 && factor < 0.81){
+      if(factor > 0.72 && factor < 0.81 && counter.innerText != "8"){
+        counter.innerText = "8";
         console.log('8th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.81 && factor < 0.90){
+      if(factor > 0.81 && factor < 0.90 && counter.innerText != "9"){
+        counter.innerText = "9";
         console.log('9th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.90 && factor < 0.99){
+      if(factor > 0.90 && factor < 0.99 && counter.innerText != "10"){
+        counter.innerText = "10";
         console.log('10th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
-      if(factor > 0.99 && factor < 1){
+      if(factor > 0.99 && factor < 1 && counter.innerText != "11"){
+        counter.innerText = "11";
         console.log('11th flip')
+        tick(0, featuresLeft);
+        tick(0, featuresMiddle);
+        tick(0, featuresRight);
       }
   }
   else{
