--- a/index.html
+++ b/index.html
@@ -460,58 +460,58 @@ window.addEventListener('scroll', () => {
         <div class="col-6">
           <div style="display: flex; overflow-x: hidden; width: 650px;" id="featuresLeft">
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/fork.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/chip.png"></img>
+              <h2>Runs Existing Code</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/satelite.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/javascript.png"></img>
+              <h2>Native Javascript</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/Squares.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/lan.png"></img>
+              <h2>Hardware Bindings</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/fork.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/javascript (1).png"></img>
+              <h2>Made in Javascript</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/window.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/window.png"></img>
+              <h2>Multithreading Reality Tabs</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/Squares.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/satelite.png"></img>
+              <h2>Futuristic APIs</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/fork.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/performance.png"></img>
+              <h2>Speed Past Legacy</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/window.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/fork.png"></img>
+              <h2>Not a Fork</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/Squares.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/Squares.png"></img>
+              <h2>Cross Platform</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/fork.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/collaboration.png"></img>
+              <h2>Package for Stores</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
             <div style="min-width: 600px; margin-right: 200px;">
-              <img class="img-fluid w-20" src="media/window.png"></img>
-              <h2>Multithreading Reailty Tabs</h2>
+              <img class="img-fluid w-25 m-3" src="media/gas.png"></img>
+              <h2>Great on gas</h2>
               <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
             </div>
           </div>
@@ -531,7 +531,7 @@ window.addEventListener('scroll', () => {
               <div style="height: 6.5vh"></div>
               <h5 id="item4">Made in Javascript</h5>
               <div style="height: 6.5vh"></div>
-              <h5 id="item5">Multithreading Reailty Tabs</h5>
+              <h5 id="item5">Multithreading Reality Tabs</h5>
               <div style="height: 6.5vh"></div>
               <h5 id="item6">Futuristic APIs</h5>
               <div style="height: 6.5vh"></div>
